--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Data Dashboard</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -50,24 +50,24 @@
         </select>
         <!--Menú cohorts-->
         <select class="menu">
-          <option value="example">Elegir grupo</option>
+          <option value="example">Elegir cohort</option>
           <option value="cohort1">lim-2018-03-pre-core-pw</option>
         </select>
         <!--Botón de select-->
-        <button id="goGeneral">Continuar</button>
+        <button id="generalData">Continuar</button>
       </div>
       <!--Segunda página HTML con los resultados generales-->
       <div class="col-lg-9" id="generalResults">
         <h3 class="heavy bg-warning text-start p-3">Data Dashboard</h3>
         <!--Menú alumnas-->
         <select class="menu">
-          <option value="Sede">Seleccione alumna</option>
+          <option value="studentSearch">Seleccione alumna</option>
         </select>
         <!--Menú orden-->
         <select class="menu">
           <option value="example">Elegir orden</option>
-          <option value="asc">Ascendente</option>
-          <option value="desc">Descendente</option>
+          <option value="upward">Ascendente</option>
+          <option value="downward">Descendente</option>
         </select>
         <!--Cohort-->
         <h4 class="pt-5 pl-4 heavy">Lim-2018-03-pre-core-pw</h4>
