--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,8 @@
       <div class="col-lg-9" id="generalResults">
         <h3 class="heavy bg-warning text-start p-3">Data Dashboard</h3>
         <!--Menú alumnas-->
-        <select class="menu">
-          <option value="studentSearch">Seleccione alumna</option>
-        </select>
+        <input type="text" id="studentSearch" onkeyup="myFunction()" placeholder="Search for student.." title="Alumna">
+
         <!--Menú orden-->
         <select class="menu">
           <option value="example">Elegir orden</option>
@@ -71,9 +70,9 @@
         </select>
         <!--Cohort-->
         <h4 class="pt-5 pl-4 heavy">Lim-2018-03-pre-core-pw</h4>
-        <!--Botones-->
-        <div class="container-fluid">
-          <div class="row">
+        <!--Aquí va contenedor de la data seleccionada-->
+        <div class="container-fluid" id="contenedor">
+          <div id="dataResult" class="row">
           </div>
         </div>
       </div>
