agregando tabla de datos

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,20 @@
         <!--Aquí va contenedor de la data seleccionada-->
         <div class="container-fluid" id="contenedor">
           <div id="dataResult" class="row">
+            <!-- Aquí va tabla de datos -->
+            <table>
+              <tr>
+              <th>Nombre</th>
+              <th>Cursos</th>
+              <th>%</th>
+              <th>Quizzes</th>
+              <th>%</th>
+              <th>Lecturas</th>
+              <th>%</th>
+              <th>Ejercicios</th>
+              <th>%</th>
+            </tr>
+            </table>
           </div>
         </div>
       </div>
