--- a/src/index.html
+++ b/src/index.html
@@ -50,49 +50,72 @@
         </select>
         <!--Menú cohorts-->
         <select class="menu">
-          <option value="example">Elegir grupo</option>
+          <option value="example">Elegir cohort</option>
           <option value="cohort1">lim-2018-03-pre-core-pw</option>
         </select>
-        <!--Botón de select-->
-        <button id="goGeneral">Continuar</button>
+        <!--Botón de select que muestra la data general-->
+        <button id="generalData">Continuar</button>
       </div>
-      <!--Segunda página HTML con los resultados generales-->
+      <!--Aquí va el titulo Data dashboard que muestra los resultados generales-->
       <div class="col-lg-9" id="generalResults">
         <h3 class="heavy bg-warning text-start p-3">Data Dashboard</h3>
         <!--Menú alumnas-->
-
-        <input type="text" id="studentSearch" onkeyup="name()" placeholder="Search for student.." title="Alumna">
+        <input type="text" id="studentSearch" onkeyup="searchStudent()" placeholder="Search for student.." title="Alumna">
 
         <!--Menú orden-->
         <select class="menu">
           <option value="example">Elegir orden</option>
-          <option value="asc">Ascendente</option>
-          <option value="desc">Descendente</option>
+          <option value="upward">Ascendente</option>
+          <option value="downward">Descendente</option>
         </select>
         <!--Cohort-->
-
-        <!--Botones-->
+        <h4 class="pt-5 pl-4 heavy">Lim-2018-03-pre-core-pw</h4>
+        <!--Aquí va contenedor de la data seleccionada-->
         <div class="container-fluid" id="contenedor">
-          <h4 class="p-4 heavy">Lim-2018-03-pre-core-pw</h4>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Nombre/email</th>
-                <th>Curso</th>
-                <th>Lecturas</th>
-                <th>Ejercicios</th>
+          <div id="dataResult" class="row">
+            <!-- Aquí va tabla de datos -->
+            <table id="table">
+              <tr id="titleData">
+                <th>Nombre</th>
+                <th>Cursos</th>
+                <th>%</th>
                 <th>Quizzes</th>
+                <th>%</th>
+                <th>Lecturas</th>
+                <th>%</th>
+                <th>Ejercicios</th>
+                <th>%</th>
               </tr>
-            </thead>
-            <tbody>
               <tr>
-                <td id="name"></td>
-                <td id="course"></td>
-                <td id="lectures"></td>
-                <td id="excercises"></td>
+                <td id="nameBox"></td>
+                </br>
               </tr>
-            </tbody>
-          </table>
+              <tr>
+                <td id="courseBox"></td>
+              </tr>
+              <tr>
+                <td id="coursePercent"></td>
+              </tr>
+              <tr>
+                <td id="quizzesBox"></td>
+              </tr>
+              <tr>
+                <td id="quizzesPercent"></td>
+              </tr>
+              <tr>
+                <td id="readingBox"></td>
+              </tr>
+              <tr>
+                <td id="readingPercent"></td>
+              </tr>
+              <tr>
+                <td id="exercisesBox"></td>
+              </tr>
+              <tr>
+                <td id="exercisesPercent"></td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </div>
