--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           <!--Menú-->
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav flex-lg-column">
-              <a class="nav-item nav-link lead py-3">Valentina Schdmit</a>
+              <a class="nav-item nav-link lead py-3">Valentina Smith</a>
               <a class="nav-item nav-link lead">Admin</a>
               <a class="nav-item nav-link lead" id="dataDash">Dashboard</a>
               <a class="nav-item nav-link lead">Configuración</a>
@@ -88,30 +88,15 @@
               </tr>
               <tr>
                 <td id="nameBox"></td>
-                </br>
-              </tr>
-              <tr>
+                <br>
                 <td id="courseBox"></td>
-              </tr>
-              <tr>
+                <br>
                 <td id="coursePercent"></td>
-              </tr>
-              <tr>
                 <td id="quizzesBox"></td>
-              </tr>
-              <tr>
                 <td id="quizzesPercent"></td>
-              </tr>
-              <tr>
                 <td id="readingBox"></td>
-              </tr>
-              <tr>
                 <td id="readingPercent"></td>
-              </tr>
-              <tr>
                 <td id="exercisesBox"></td>
-              </tr>
-              <tr>
                 <td id="exercisesPercent"></td>
               </tr>
             </table>
