Nombres de las alumnas con su ID respectivo

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           <!--Menú-->
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav flex-lg-column">
-              <a class="nav-item nav-link lead py-3">Valentina Schdmit</a>
+              <a class="nav-item nav-link lead py-3">Valentina Smith</a>
               <a class="nav-item nav-link lead">Admin</a>
               <a class="nav-item nav-link lead" id="dataDash">Dashboard</a>
               <a class="nav-item nav-link lead">Configuración</a>
@@ -71,50 +71,9 @@
         <!--Cohort-->
         <h4 class="pt-5 pl-4 heavy">Lim-2018-03-pre-core-pw</h4>
         <!--Aquí va contenedor de la data seleccionada-->
-        <div class="container-fluid" id="contenedor">
-          <div id="dataResult" class="row">
-            <!-- Aquí va tabla de datos -->
-            <table id="table">
-              <tr id="titleData">
-                <th>Nombre</th>
-                <th>Cursos</th>
-                <th>%</th>
-                <th>Quizzes</th>
-                <th>%</th>
-                <th>Lecturas</th>
-                <th>%</th>
-                <th>Ejercicios</th>
-                <th>%</th>
-              </tr>
-              <tr>
-                <td id="nameBox"></td>
-                </br>
-              </tr>
-              <tr>
-                <td id="courseBox"></td>
-              </tr>
-              <tr>
-                <td id="coursePercent"></td>
-              </tr>
-              <tr>
-                <td id="quizzesBox"></td>
-              </tr>
-              <tr>
-                <td id="quizzesPercent"></td>
-              </tr>
-              <tr>
-                <td id="readingBox"></td>
-              </tr>
-              <tr>
-                <td id="readingPercent"></td>
-              </tr>
-              <tr>
-                <td id="exercisesBox"></td>
-              </tr>
-              <tr>
-                <td id="exercisesPercent"></td>
-              </tr>
-            </table>
+        <div class="container-fluid">
+          <div class="row">
+            <ul id="nameList"></ul>
           </div>
         </div>
       </div>
