Avance mínimo, boton para ver las clases

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         <!--Botón de select que muestra la data general-->
         <button id="generalData">Continuar</button>
       </div>
-      <!--Aquí va el titulo Data dashboard que muestra los resultados generales-->
+      <!--Aquí va el titulo Data dashboard que muestra los nombres e ID de alumnas-->
       <div class="col-lg-9" id="generalResults">
         <h3 class="heavy bg-warning text-start p-3">Data Dashboard</h3>
         <!--Menú alumnas-->
@@ -68,6 +68,8 @@
           <option value="upward">Ascendente</option>
           <option value="downward">Descendente</option>
         </select>
+        <!--Botón cursos generales-->
+        <button id="gerenalCourses">Cursos</button>
         <!--Cohort-->
         <h4 class="pt-5 pl-4 heavy">Lim-2018-03-pre-core-pw</h4>
         <!--Aquí va contenedor de la data seleccionada-->
