actualización para merge con COte

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
         <!--Menú orden-->
         <select class="menu">
           <option value="example">Elegir orden</option>
-          <option value="upward">Ascendente</option>
+          <option value="upward" onclick="onToggleSort()">Ascendente</option>
           <option value="downward">Descendente</option>
         </select>
         <!--Cohort-->
