--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,7 @@
     crossorigin="anonymous"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/data.js"></script>
+  <script src="assets/js/funcionalidad.js"></script>
 </body>
 
 </html>
