--- a/src/index.html
+++ b/src/index.html
@@ -64,19 +64,30 @@
 
       <!--Menú orden-->
       <select class="menu">
-       <!-- <option value="example">Elegir orden</option> --> 
-        <option id="toggleSort" value="upward" onclick="onToggleSort()">Ascendente</option>
-        <!--  
+        <!-- <option value="example">Elegir orden</option> 
+        <option id="toggleSort" value="upward" change="onToggleSort()">Ascendente</option>
+        
         <option id="toggleSortDesc" value="downward" onclick="onToggleSort()">Descendente</option>
       </select>-->
-      <!--Botón cursos generales-->
-      <button id="generalCourses">Cursos</button>
-      <!--Cohort-->
-      <h4 class="pt-5 pl-4 heavy">Lim-2018-03-pre-core-pw</h4>
-      <!--Aquí va contenedor de la data seleccionada-->
-      <div class="container-fluid">
-        <ul class="pl-0" id="nameList"></ul>
-      </div>
+        <!--Botón cursos generales-->
+        <button id="generalCourses">Cursos</button>
+        <!--Cohort-->
+        <h4 class="pt-5 pl-4 heavy">Lim-2018-03-pre-core-pw</h4>
+        <!--Aquí va contenedor de la data seleccionada-->
+        <div class="container-fluid">
+          <table class="table my-3">
+            <thead>
+              <tr>
+                <th scope="col">Alumna</th>
+                <th scope="col">Completitud total</th>
+                <th scope="col">% Ejercicios completados</th>
+                <th scope="col">Puntuación promedio quizzes completados</th>
+                <th scope="col">% Lecturas completadas</th>
+              </tr>
+            </thead>
+            <tbody id="resultData">
+            </tbody>
+        </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
